# n8n-py-scripts

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini
.claude/: instructions.md
.claude/skills/commit-and-push/: SKILL.md
src/: __init__.py
src/example_project/example_workflow/: step1_data_processing.py  step2_analysis.py
src/portfolio_analysis/metrics/position_drift/: calculate_position_drift.py  system.prompt
src/portfolio_analysis/metrics/position_drift_vs_yesterday/: calculate_position_drift_vs_yesterday.py  system.prompt
src/portfolio_analysis/metrics/sector_drift/: calculate_sector_drift.py  system.prompt
src/portfolio_analysis/upload_position_file/: calculate_security_type_aggregation.py  calculate_security_type_aggregation_by_sector.py  calculate_security_type_aggregation_detailed.py  cleanup_raw_data_for_storage.py  extract-filename.py  extract_filename.py  flat_aggregation.py
src/portfolio_analysis/upload_position_file/workflow/: README.md  Upload Position File.json
test/: conftest.py  test_calculate_position_drift.py  test_example_workflow.py  test_metrics.py  test_upload_position_file_workflow.py  utils.py
test/fixtures/example_project/example_workflow/: step1_expected_output.json  step1_input.json
test/fixtures/portfolio_analysis/upload_position_file/: calculate_security_type_aggregation_detailed_output.json  clean_and_prepare_fields.json  clean_raw_data_for_storage.json  download_file_step.json  enrich_raw_data_with_sector_names_output.json  enrich_raw_data_with_sector_names_output_format_changed.json  (+1 more)
(+6 files in other folders)
